--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,3 +38,32 @@ body {
 .my-transition {
     transition: 0.5s all ease-in;
 }
+
+.loading-container {
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid rgba(255, 255, 255, 0.05);
+    border-radius: 50%;
+}
+
+.loading-spinner {
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid transparent;
+    border-top: 4px solid #fff; /* White color for the spinner */
+    border-radius: 50%;
+    animation: spin 1.3s linear infinite; /* Spinning animation */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
